Staff fontend View booking front end customer frontend create table of booking and staff customer

--- a/Staff.resx
+++ b/Staff.resx
@@ -152,4 +152,55 @@
         8qjAhKQ9CExcB4GJ6yAwcR0EJo7Ttjs1H6zDP+jDowAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="bunifuThinButton24.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALAAAAAyCAYAAAD8z1GNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKQSURBVHhe7Z0xS1tRGIYzujk6uummm5s4iYvgIjg4+Bvc
+        3MwgZuhQaCEFIQRpJYJCFouFCAELlQolxRaCFBpUJEoLCXTI0OHT9+R625BbN5v7wfPAC4Hk3unh8N0T
+        znsz7XbbCPEaBCaug8DEdRCYuA4CE9dBYOI6jwr88+bGPhYKtru4aIXpaXs+OmrZTIaQJ408k29v5uft
+        Qz5vtxcXiX4q/xT48/5+uNHe0pJ9KZWsUa1aq9EwgKdGnsm3erls5ZWV4KFETvK0T2DZvre8bK/n5uxX
+        sxndEmBwdFqtIPL27Kxdn5/3+NojsOTNT0xYrViMLgVID98OD21rasouz86SBdbKi7yQZjRaaD7uE1gz
+        r8YGgLRztLZmR9nsH4G126BBmZkXPPC707FXk5P2/fS0K7Ce8DQkA3jhfS5nb1dXuwJrv01bFgBeaNZq
+        YcMhCPxibMx+1OvRVwDpR2PExtBQV+Dc8HDYawPwhP61CwLrA4A3EBhcg8DgGgQG1yAwuAaBwTUIDK5B
+        YHANAoNrEBhcg8DgGgQG1yAwuAaBwTUIDK5BYHANAoNrYoF1NENHNAA8EQusI/X0noE3YoHVOaXaHgAv
+        6BCyDiMHgSvr66HtBMALqkBTFVoQWGVpL8fHmYPBDaWFBfu0s9MVWHl3vwJX71digLSjvmqVrsvbWGD1
+        o6n17+rkJPoZQPpQf5+mhYfW9lhgRWVpKk2jpQfSiOQtzszY14OD2NkegZV6pRI6p443N6PLAAaPuvu0
+        8v4tr9InsKJxQs1/sl1Pe9SuwiBQ3ZnmXb2nRQWUSS97SRT4IbJdWxXPRkbCpjEh/zPq7NPDmt6UleSn
+        8qjAhKQ9CExcB4GJ6yAwcR0EJo7Ttjs1H6zDP+jDowAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bunifuThinButton25.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALAAAAAyCAYAAAD8z1GNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKQSURBVHhe7Z0xS1tRGIYzujk6uummm5s4iYvgIjg4+Bvc
+        3MwgZuhQaCEFIQRpJYJCFouFCAELlQolxRaCFBpUJEoLCXTI0OHT9+R625BbN5v7wfPAC4Hk3unh8N0T
+        znsz7XbbCPEaBCaug8DEdRCYuA4CE9dBYOI6jwr88+bGPhYKtru4aIXpaXs+OmrZTIaQJ408k29v5uft
+        Qz5vtxcXiX4q/xT48/5+uNHe0pJ9KZWsUa1aq9EwgKdGnsm3erls5ZWV4KFETvK0T2DZvre8bK/n5uxX
+        sxndEmBwdFqtIPL27Kxdn5/3+NojsOTNT0xYrViMLgVID98OD21rasouz86SBdbKi7yQZjRaaD7uE1gz
+        r8YGgLRztLZmR9nsH4G126BBmZkXPPC707FXk5P2/fS0K7Ce8DQkA3jhfS5nb1dXuwJrv01bFgBeaNZq
+        YcMhCPxibMx+1OvRVwDpR2PExtBQV+Dc8HDYawPwhP61CwLrA4A3EBhcg8DgGgQG1yAwuAaBwTUIDK5B
+        YHANAoNrEBhcg8DgGgQG1yAwuAaBwTUIDK5BYHANAoNrYoF1NENHNAA8EQusI/X0noE3YoHVOaXaHgAv
+        6BCyDiMHgSvr66HtBMALqkBTFVoQWGVpL8fHmYPBDaWFBfu0s9MVWHl3vwJX71digLSjvmqVrsvbWGD1
+        o6n17+rkJPoZQPpQf5+mhYfW9lhgRWVpKk2jpQfSiOQtzszY14OD2NkegZV6pRI6p443N6PLAAaPuvu0
+        8v4tr9InsKJxQs1/sl1Pe9SuwiBQ3ZnmXb2nRQWUSS97SRT4IbJdWxXPRkbCpjEh/zPq7NPDmt6UleSn
+        8qjAhKQ9CExcB4GJ6yAwcR0EJo7Ttjs1H6zDP+jDowAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bunifuThinButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALAAAAAyCAYAAAD8z1GNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKQSURBVHhe7Z0xS1tRGIYzujk6uummm5s4iYvgIjg4+Bvc
+        3MwgZuhQaCEFIQRpJYJCFouFCAELlQolxRaCFBpUJEoLCXTI0OHT9+R625BbN5v7wfPAC4Hk3unh8N0T
+        znsz7XbbCPEaBCaug8DEdRCYuA4CE9dBYOI6jwr88+bGPhYKtru4aIXpaXs+OmrZTIaQJ408k29v5uft
+        Qz5vtxcXiX4q/xT48/5+uNHe0pJ9KZWsUa1aq9EwgKdGnsm3erls5ZWV4KFETvK0T2DZvre8bK/n5uxX
+        sxndEmBwdFqtIPL27Kxdn5/3+NojsOTNT0xYrViMLgVID98OD21rasouz86SBdbKi7yQZjRaaD7uE1gz
+        r8YGgLRztLZmR9nsH4G126BBmZkXPPC707FXk5P2/fS0K7Ce8DQkA3jhfS5nb1dXuwJrv01bFgBeaNZq
+        YcMhCPxibMx+1OvRVwDpR2PExtBQV+Dc8HDYawPwhP61CwLrA4A3EBhcg8DgGgQG1yAwuAaBwTUIDK5B
+        YHANAoNrEBhcg8DgGgQG1yAwuAaBwTUIDK5BYHANAoNrYoF1NENHNAA8EQusI/X0noE3YoHVOaXaHgAv
+        6BCyDiMHgSvr66HtBMALqkBTFVoQWGVpL8fHmYPBDaWFBfu0s9MVWHl3vwJX71digLSjvmqVrsvbWGD1
+        o6n17+rkJPoZQPpQf5+mhYfW9lhgRWVpKk2jpQfSiOQtzszY14OD2NkegZV6pRI6p443N6PLAAaPuvu0
+        8v4tr9InsKJxQs1/sl1Pe9SuwiBQ3ZnmXb2nRQWUSS97SRT4IbJdWxXPRkbCpjEh/zPq7NPDmt6UleSn
+        8qjAhKQ9CExcB4GJ6yAwcR0EJo7Ttjs1H6zDP+jDowAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
